<?xml version="1.0"?>
<package format="2">
  <name>gazebo_hw_plugin</name>
  <version>2.5.19</version>
  <description>gazebo_hw_plugin</description>

  <maintainer email="grizzi@ethz.ch">Giuseppe Rizzi</maintainer>

  <license>BSD</license>

  <author>Jonathan Bohren</author>
  <author>Dave Coleman</author>
  <author>Giuseppe Rizzi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <depend>gazebo_dev</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>urdf</depend>
  <depend>angles</depend>
  <depend>message_logger</depend>

  <export>
    <gazebo_hw_plugin plugin="${prefix}/multi_interface_sim_plugin.xml"/>
  </export>
</package>
